fix navbar view on mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,4 @@
-nav{
+.navbar{
   height:10vh;
   display:flex;
   align-items: center;
@@ -7,7 +7,7 @@ nav{
   padding-bottom: 15px;
 }
 
-nav button{
+.navbar-button{
   background-color: #A6A6A6;
   border:none;
   padding:15px;
@@ -18,6 +18,6 @@ nav button{
   transition: .4s all;
 }
 
-button:hover{
+.navbar-button:hover{
   background-color:#E8E8E8;
 }
